# FRAME-FM

./: .gitignore  README.md  mlflow-server.bat  pyproject.toml  torchx_mlflow_demo.py  train_eurosat.py
.github/ISSUE_TEMPLATE/: framework-review.yaml
conf/: config.yaml
frame/: config.yaml  train.py
frame/configs/: __init__.py  config.py  issibard_config.old  jasmain_config.old  lightning_config.old  mlflow_config.old
frame/dataloaders/: croissant_loader.py  dataloader.py  geo_croissant_loader.py  torchgeo_loader.py
frame/models/: model.py  neural_net.py  random_forest.py
frame/training/: train.py  train_cluster.py  train_local.py
frame/untils/: croissant_ml.py  geo_croissant_ml.py
